// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DetailPanel > Snapshot Tests > should match snapshot for character entity 1`] = `
<div
  class="w-96 h-full bg-white/10 backdrop-blur-md border-l border-white/20 flex flex-col animate-in slide-in-from-right duration-300"
>
  <div
    class="flex items-center justify-between p-6 border-b border-white/10"
  >
    <div
      class="flex items-center gap-3"
    >
      <span
        class="text-2xl"
      >
        👤
      </span>
      <div>
        <h3
          class="text-lg font-semibold text-foreground"
        >
          Character
           Details
        </h3>
        <p
          class="text-xs text-muted-foreground"
        >
          ID: 
          char-1
        </p>
      </div>
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 hover:bg-white/10"
      data-slot="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
  <div
    class="flex-1 overflow-y-auto p-6 space-y-6"
  >
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Basic Information
        </span>
      </button>
      <div
        class="space-y-4 pl-6"
      >
        <div
          class="space-y-2 transition-all ease-in-out"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
            for="name"
          >
            Name
            <span
              class="text-destructive ml-1"
            >
              *
            </span>
          </label>
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 flex h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-white/5 border-white/10 focus:border-white/20 transition-all"
            data-slot="input"
            id="name"
            value="Alice Walker"
          />
        </div>
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
            for="type"
          >
            Type
            <span
              class="text-destructive ml-1"
            >
              *
            </span>
          </label>
          <button
            aria-autocomplete="none"
            aria-controls="radix-«r0»"
            aria-expanded="false"
            class="data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex w-fit items-center justify-between gap-2 rounded-md border px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-white/5 border-white/10 focus:border-white/20"
            data-size="default"
            data-slot="select-trigger"
            data-state="closed"
            dir="ltr"
            role="combobox"
            type="button"
          >
            <span
              data-slot="select-value"
              style="pointer-events: none;"
            >
              Player
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down size-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
            for="tier"
          >
            Tier
            <span
              class="text-destructive ml-1"
            >
              *
            </span>
          </label>
          <button
            aria-autocomplete="none"
            aria-controls="radix-«r1»"
            aria-expanded="false"
            class="data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex w-fit items-center justify-between gap-2 rounded-md border px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-white/5 border-white/10 focus:border-white/20"
            data-size="default"
            data-slot="select-trigger"
            data-state="closed"
            dir="ltr"
            role="combobox"
            type="button"
          >
            <span
              data-slot="select-value"
              style="pointer-events: none;"
            >
              Core
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down size-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px bg-white/10"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Additional Details
        </span>
      </button>
    </div>
    <div
      class="shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px bg-white/10"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Metadata
        </span>
      </button>
    </div>
  </div>
  <div
    class="border-t border-white/10 p-4 flex gap-2"
  >
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex-1 bg-white/5 border-white/10 hover:bg-white/10"
      data-slot="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-x h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m15 9-6 6"
        />
        <path
          d="m9 9 6 6"
        />
      </svg>
      Cancel
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground shadow-xs h-9 px-4 py-2 has-[>svg]:px-3 flex-1 transition-all bg-primary/20 hover:bg-primary/30"
      data-slot="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-save h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
        />
        <path
          d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
        />
        <path
          d="M7 3v4a1 1 0 0 0 1 1h7"
        />
      </svg>
      Save Changes
    </button>
  </div>
</div>
`;

exports[`DetailPanel > Snapshot Tests > should match snapshot for element entity 1`] = `
<div
  class="w-96 h-full bg-white/10 backdrop-blur-md border-l border-white/20 flex flex-col animate-in slide-in-from-right duration-300"
>
  <div
    class="flex items-center justify-between p-6 border-b border-white/10"
  >
    <div
      class="flex items-center gap-3"
    >
      <span
        class="text-2xl"
      >
        📦
      </span>
      <div>
        <h3
          class="text-lg font-semibold text-foreground"
        >
          Element
           Details
        </h3>
        <p
          class="text-xs text-muted-foreground"
        >
          ID: 
          elem-1
        </p>
      </div>
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 hover:bg-white/10"
      data-slot="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
  <div
    class="flex-1 overflow-y-auto p-6 space-y-6"
  >
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Basic Information
        </span>
      </button>
      <div
        class="space-y-4 pl-6"
      >
        <div
          class="space-y-2 transition-all ease-in-out"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
            for="name"
          >
            Name
            <span
              class="text-destructive ml-1"
            >
              *
            </span>
          </label>
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 flex h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-white/5 border-white/10 focus:border-white/20 transition-all"
            data-slot="input"
            id="name"
            value="Murder Weapon"
          />
        </div>
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
            for="basicType"
          >
            Basic Type
            <span
              class="text-destructive ml-1"
            >
              *
            </span>
          </label>
          <button
            aria-autocomplete="none"
            aria-controls="radix-«r7»"
            aria-expanded="false"
            class="data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex w-fit items-center justify-between gap-2 rounded-md border px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-white/5 border-white/10 focus:border-white/20"
            data-size="default"
            data-slot="select-trigger"
            data-state="closed"
            dir="ltr"
            role="combobox"
            type="button"
          >
            <span
              data-slot="select-value"
              style="pointer-events: none;"
            >
              Prop
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down size-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px bg-white/10"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Additional Details
        </span>
      </button>
    </div>
    <div
      class="shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px bg-white/10"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Metadata
        </span>
      </button>
    </div>
  </div>
  <div
    class="border-t border-white/10 p-4 flex gap-2"
  >
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex-1 bg-white/5 border-white/10 hover:bg-white/10"
      data-slot="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-x h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m15 9-6 6"
        />
        <path
          d="m9 9 6 6"
        />
      </svg>
      Cancel
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground shadow-xs h-9 px-4 py-2 has-[>svg]:px-3 flex-1 transition-all bg-primary/20 hover:bg-primary/30"
      data-slot="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-save h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
        />
        <path
          d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
        />
        <path
          d="M7 3v4a1 1 0 0 0 1 1h7"
        />
      </svg>
      Save Changes
    </button>
  </div>
</div>
`;

exports[`DetailPanel > Snapshot Tests > should match snapshot for puzzle entity 1`] = `
<div
  class="w-96 h-full bg-white/10 backdrop-blur-md border-l border-white/20 flex flex-col animate-in slide-in-from-right duration-300"
>
  <div
    class="flex items-center justify-between p-6 border-b border-white/10"
  >
    <div
      class="flex items-center gap-3"
    >
      <span
        class="text-2xl"
      >
        🧩
      </span>
      <div>
        <h3
          class="text-lg font-semibold text-foreground"
        >
          Puzzle
           Details
        </h3>
        <p
          class="text-xs text-muted-foreground"
        >
          ID: 
          puzzle-1
        </p>
      </div>
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 hover:bg-white/10"
      data-slot="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
  <div
    class="flex-1 overflow-y-auto p-6 space-y-6"
  >
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Basic Information
        </span>
      </button>
      <div
        class="space-y-4 pl-6"
      >
        <div
          class="space-y-2 transition-all ease-in-out"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
            for="name"
          >
            Name
            <span
              class="text-destructive ml-1"
            >
              *
            </span>
          </label>
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 flex h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-white/5 border-white/10 focus:border-white/20 transition-all"
            data-slot="input"
            id="name"
            value="Find the Killer"
          />
        </div>
      </div>
    </div>
    <div
      class="shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px bg-white/10"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Additional Details
        </span>
      </button>
    </div>
    <div
      class="shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px bg-white/10"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Metadata
        </span>
      </button>
    </div>
  </div>
  <div
    class="border-t border-white/10 p-4 flex gap-2"
  >
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex-1 bg-white/5 border-white/10 hover:bg-white/10"
      data-slot="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-x h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m15 9-6 6"
        />
        <path
          d="m9 9 6 6"
        />
      </svg>
      Cancel
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground shadow-xs h-9 px-4 py-2 has-[>svg]:px-3 flex-1 transition-all bg-primary/20 hover:bg-primary/30"
      data-slot="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-save h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
        />
        <path
          d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
        />
        <path
          d="M7 3v4a1 1 0 0 0 1 1h7"
        />
      </svg>
      Save Changes
    </button>
  </div>
</div>
`;

exports[`DetailPanel > Snapshot Tests > should match snapshot for timeline entity 1`] = `
<div
  class="w-96 h-full bg-white/10 backdrop-blur-md border-l border-white/20 flex flex-col animate-in slide-in-from-right duration-300"
>
  <div
    class="flex items-center justify-between p-6 border-b border-white/10"
  >
    <div
      class="flex items-center gap-3"
    >
      <span
        class="text-2xl"
      >
        📅
      </span>
      <div>
        <h3
          class="text-lg font-semibold text-foreground"
        >
          Timeline
           Details
        </h3>
        <p
          class="text-xs text-muted-foreground"
        >
          ID: 
          timeline-1
        </p>
      </div>
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 hover:bg-white/10"
      data-slot="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
  <div
    class="flex-1 overflow-y-auto p-6 space-y-6"
  >
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Basic Information
        </span>
      </button>
      <div
        class="space-y-4 pl-6"
      >
        <div
          class="space-y-2 transition-all ease-in-out"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
            for="description"
          >
            Description
            <span
              class="text-destructive ml-1"
            >
              *
            </span>
          </label>
          <textarea
            class="placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border px-3 py-2 text-base shadow-xs outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm bg-white/5 border-white/10 focus:border-white/20 resize-none transition-all"
            data-slot="textarea"
            id="description"
            rows="3"
          >
            The victim is found dead
          </textarea>
        </div>
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
            for="date"
          >
            Date
            <span
              class="text-destructive ml-1"
            >
              *
            </span>
          </label>
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 flex h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-white/5 border-white/10 focus:border-white/20"
            data-slot="input"
            id="date"
            type="date"
            value="2024-01-01T22:00:00"
          />
        </div>
      </div>
    </div>
    <div
      class="shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px bg-white/10"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Additional Details
        </span>
      </button>
    </div>
    <div
      class="shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px bg-white/10"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Metadata
        </span>
      </button>
    </div>
  </div>
  <div
    class="border-t border-white/10 p-4 flex gap-2"
  >
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex-1 bg-white/5 border-white/10 hover:bg-white/10"
      data-slot="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-x h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m15 9-6 6"
        />
        <path
          d="m9 9 6 6"
        />
      </svg>
      Cancel
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground shadow-xs h-9 px-4 py-2 has-[>svg]:px-3 flex-1 transition-all bg-primary/20 hover:bg-primary/30"
      data-slot="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-save h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
        />
        <path
          d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
        />
        <path
          d="M7 3v4a1 1 0 0 0 1 1h7"
        />
      </svg>
      Save Changes
    </button>
  </div>
</div>
`;

exports[`DetailPanel > Snapshot Tests > should match snapshot when entity is null 1`] = `null`;

exports[`DetailPanel > Snapshot Tests > should match snapshot when loading 1`] = `
<div
  class="w-96 h-full bg-white/10 backdrop-blur-md border-l border-white/20 flex flex-col animate-in slide-in-from-right duration-300"
>
  <div
    class="flex items-center justify-between p-6 border-b border-white/10"
  >
    <div
      class="flex items-center gap-3"
    >
      <span
        class="text-2xl"
      >
        👤
      </span>
      <div>
        <h3
          class="text-lg font-semibold text-foreground"
        >
          Character
           Details
        </h3>
        <p
          class="text-xs text-muted-foreground"
        >
          ID: 
          char-1
        </p>
      </div>
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 hover:bg-white/10"
      data-slot="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
  <div
    class="flex-1 overflow-y-auto p-6 space-y-6"
  >
    <div
      class="flex items-center justify-center py-12"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-loader-circle h-8 w-8 animate-spin text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12a9 9 0 1 1-6.219-8.56"
        />
      </svg>
    </div>
  </div>
  <div
    class="border-t border-white/10 p-4 flex gap-2"
  >
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex-1 bg-white/5 border-white/10 hover:bg-white/10"
      data-slot="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-x h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m15 9-6 6"
        />
        <path
          d="m9 9 6 6"
        />
      </svg>
      Cancel
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground shadow-xs h-9 px-4 py-2 has-[>svg]:px-3 flex-1 transition-all bg-primary/20 hover:bg-primary/30"
      data-slot="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-save h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
        />
        <path
          d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
        />
        <path
          d="M7 3v4a1 1 0 0 0 1 1h7"
        />
      </svg>
      Save Changes
    </button>
  </div>
</div>
`;

exports[`DetailPanel > Snapshot Tests > should match snapshot when saving 1`] = `
<div
  class="w-96 h-full bg-white/10 backdrop-blur-md border-l border-white/20 flex flex-col animate-in slide-in-from-right duration-300"
>
  <div
    class="flex items-center justify-between p-6 border-b border-white/10"
  >
    <div
      class="flex items-center gap-3"
    >
      <span
        class="text-2xl"
      >
        👤
      </span>
      <div>
        <h3
          class="text-lg font-semibold text-foreground"
        >
          Character
           Details
        </h3>
        <p
          class="text-xs text-muted-foreground"
        >
          ID: 
          char-1
        </p>
      </div>
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 hover:bg-white/10"
      data-slot="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
  <div
    class="flex-1 overflow-y-auto p-6 space-y-6"
  >
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Basic Information
        </span>
      </button>
      <div
        class="space-y-4 pl-6"
      >
        <div
          class="space-y-2 transition-all ease-in-out"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
            for="name"
          >
            Name
            <span
              class="text-destructive ml-1"
            >
              *
            </span>
          </label>
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 flex h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-white/5 border-white/10 focus:border-white/20 transition-all"
            data-slot="input"
            disabled=""
            id="name"
            value="Alice Walker"
          />
        </div>
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
            for="type"
          >
            Type
            <span
              class="text-destructive ml-1"
            >
              *
            </span>
          </label>
          <button
            aria-autocomplete="none"
            aria-controls="radix-«rf»"
            aria-expanded="false"
            class="data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex w-fit items-center justify-between gap-2 rounded-md border px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-white/5 border-white/10 focus:border-white/20"
            data-disabled=""
            data-size="default"
            data-slot="select-trigger"
            data-state="closed"
            dir="ltr"
            disabled=""
            role="combobox"
            type="button"
          >
            <span
              data-slot="select-value"
              style="pointer-events: none;"
            >
              Player
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down size-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
            for="tier"
          >
            Tier
            <span
              class="text-destructive ml-1"
            >
              *
            </span>
          </label>
          <button
            aria-autocomplete="none"
            aria-controls="radix-«rg»"
            aria-expanded="false"
            class="data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex w-fit items-center justify-between gap-2 rounded-md border px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-white/5 border-white/10 focus:border-white/20"
            data-disabled=""
            data-size="default"
            data-slot="select-trigger"
            data-state="closed"
            dir="ltr"
            disabled=""
            role="combobox"
            type="button"
          >
            <span
              data-slot="select-value"
              style="pointer-events: none;"
            >
              Core
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down size-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px bg-white/10"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Additional Details
        </span>
      </button>
    </div>
    <div
      class="shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px bg-white/10"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Metadata
        </span>
      </button>
    </div>
  </div>
  <div
    class="border-t border-white/10 p-4 flex gap-2"
  >
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex-1 bg-white/5 border-white/10 hover:bg-white/10"
      data-slot="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-x h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m15 9-6 6"
        />
        <path
          d="m9 9 6 6"
        />
      </svg>
      Cancel
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground shadow-xs h-9 px-4 py-2 has-[>svg]:px-3 flex-1 transition-all bg-primary/20 hover:bg-primary/30"
      data-slot="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-loader-circle h-4 w-4 mr-2 animate-spin"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12a9 9 0 1 1-6.219-8.56"
        />
      </svg>
      Saving...
    </button>
  </div>
</div>
`;

exports[`DetailPanel > Snapshot Tests > should match snapshot with error 1`] = `
<div
  class="w-96 h-full bg-white/10 backdrop-blur-md border-l border-white/20 flex flex-col animate-in slide-in-from-right duration-300"
>
  <div
    class="flex items-center justify-between p-6 border-b border-white/10"
  >
    <div
      class="flex items-center gap-3"
    >
      <span
        class="text-2xl"
      >
        👤
      </span>
      <div>
        <h3
          class="text-lg font-semibold text-foreground"
        >
          Character
           Details
        </h3>
        <p
          class="text-xs text-muted-foreground"
        >
          ID: 
          char-1
        </p>
      </div>
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 hover:bg-white/10"
      data-slot="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
  <div
    class="flex-1 overflow-y-auto p-6 space-y-6"
  >
    <div
      class="bg-destructive/10 border border-destructive/20 rounded-lg p-3"
    >
      <p
        class="text-sm text-destructive"
      >
        Failed to save changes
      </p>
    </div>
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Basic Information
        </span>
      </button>
      <div
        class="space-y-4 pl-6"
      >
        <div
          class="space-y-2 transition-all ease-in-out"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
            for="name"
          >
            Name
            <span
              class="text-destructive ml-1"
            >
              *
            </span>
          </label>
          <input
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 flex h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-white/5 border-white/10 focus:border-white/20 transition-all"
            data-slot="input"
            id="name"
            value="Alice Walker"
          />
        </div>
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
            for="type"
          >
            Type
            <span
              class="text-destructive ml-1"
            >
              *
            </span>
          </label>
          <button
            aria-autocomplete="none"
            aria-controls="radix-«rm»"
            aria-expanded="false"
            class="data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex w-fit items-center justify-between gap-2 rounded-md border px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-white/5 border-white/10 focus:border-white/20"
            data-size="default"
            data-slot="select-trigger"
            data-state="closed"
            dir="ltr"
            role="combobox"
            type="button"
          >
            <span
              data-slot="select-value"
              style="pointer-events: none;"
            >
              Player
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down size-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-sm font-medium"
            data-slot="label"
            for="tier"
          >
            Tier
            <span
              class="text-destructive ml-1"
            >
              *
            </span>
          </label>
          <button
            aria-autocomplete="none"
            aria-controls="radix-«rn»"
            aria-expanded="false"
            class="data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex w-fit items-center justify-between gap-2 rounded-md border px-3 py-2 text-sm whitespace-nowrap shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 data-[size=default]:h-9 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-white/5 border-white/10 focus:border-white/20"
            data-size="default"
            data-slot="select-trigger"
            data-state="closed"
            dir="ltr"
            role="combobox"
            type="button"
          >
            <span
              data-slot="select-value"
              style="pointer-events: none;"
            >
              Core
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down size-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px bg-white/10"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Additional Details
        </span>
      </button>
    </div>
    <div
      class="shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px bg-white/10"
      data-orientation="horizontal"
      data-slot="separator"
      role="none"
    />
    <div
      class="space-y-3"
    >
      <button
        class="flex items-center gap-2 w-full text-left hover:text-foreground/80 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
        <span
          class="text-sm font-semibold uppercase tracking-wider text-muted-foreground"
        >
          Metadata
        </span>
      </button>
    </div>
  </div>
  <div
    class="border-t border-white/10 p-4 flex gap-2"
  >
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 flex-1 bg-white/5 border-white/10 hover:bg-white/10"
      data-slot="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-x h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="m15 9-6 6"
        />
        <path
          d="m9 9 6 6"
        />
      </svg>
      Cancel
    </button>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground shadow-xs h-9 px-4 py-2 has-[>svg]:px-3 flex-1 transition-all bg-primary/20 hover:bg-primary/30"
      data-slot="button"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-save h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
        />
        <path
          d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
        />
        <path
          d="M7 3v4a1 1 0 0 0 1 1h7"
        />
      </svg>
      Save Changes
    </button>
  </div>
</div>
`;
